# Idris2

./: .clang-format  .ecrc  .editorconfig  .gitattributes  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG_NEXT.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  Dumb.idr  INSTALL.md  LICENSE  Makefile  NODE_BUILD.md  README.md  SANITY_CHECK_2087  bootstrap-rkt.sh  bootstrap-stage1-chez.sh  bootstrap-stage1-racket.sh  bootstrap-stage2.mk  bootstrap-stage2.sh  bootstrap-win.sh  bootstrap.sh  common.mk  config.mk  config.mk.sample  default.nix  eslint.config.js  flake.nix  idris-protocols.ipkg  idris2.ipkg  idris2.node.ipkg  idris2.node.js.ipkg  idris2.node.js.sh  (+16 more)
docs/: README.md  pyproject.toml  refc-cross-compilation.md  refc-ffi-guide.md  refc-refcounting-contract.md  refc-runtime-architecture.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/app/: exceptionsstate.rst  index.rst  interfaces.rst  introapp.rst  linear.rst
docs/source/backends/: backend-cookbook.rst  chez.rst  custom.rst  gambit.rst  incremental.rst  index.rst  javascript.rst  libraries.rst  racket.rst  refc.rst
docs/source/cookbook/: Calculator.idr  LambdaCalculus.idr  index.rst  parsing.rst
docs/source/elaboratorReflection/: elabReflection.rst  elaborator-reflection.rst  example1.rst  generatingData.rst  holes.rst  index.rst  primitive.rst  tactics.rst
docs/source/faq/: faq.rst
docs/source/ffi/: ffi.rst  index.rst  readline.rst
docs/source/implementation/: build-system.rst  ide-protocol.rst  index.rst  (+1 more)
(+6465 files in other folders)
